--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,13 @@ body {
     text-decoration: underline;
   }
   img{
-    padding-top:;
+    width: 77.33px;
+    height: 80px;
+  }
+  h1{
+    width: 268px;
+  }
+  .start{
+    color: hsla(0, 0%, 45%, 1);
   }
   
